<resources>
    <string name="app_name">MoodTracker3</string>
    <string name="history_image">History Image</string>
    <string name="comment_image">Comment Image</string>
    <string name="happy_image">Happy_Image</string>
    <string name="plus_button">+</string>
    <string name="minus_Button">-</string>
    <string name="commentaire">Comment</string>
    <string name="cancelButton">Cancel</string>
    <string name="valid">Valid</string>
    <string name="clear">clear!</string>
    <string name="weeklyMoodPieChart">Weekly Mood Pie Chart</string>
</resources>
