<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/commentaire"/>


    <EditText
        android:id="@+id/editTextPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="25sp"/>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <Button
           android:id="@+id/annulerButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@android:color/transparent"
           android:text="@string/cancelButton"
           android:textColor="@color/colorPrimaryDark"
           />

       <Button
           android:id="@+id/validerButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@android:color/transparent"
           android:text="@string/valid"
           android:textColor="@color/colorPrimaryDark" />
   </LinearLayout>

</LinearLayout>